# learning_journey

./: .gitignore  AGENTS.md  PROJECTS.md  README.md  config.py  opencode.jsonc  qwen-ctx.modelfile  requirements.txt
.cursor/: hooks.json
.cursor/commands/: commit-msg.md  draft-issue.md  eval.md  labels.md  pr-prep.md  readme.md  review.md  task-brief.md  test.md
.cursor/hooks/: format.sh
.cursor/rules/: ai-sdk-patterns.mdc  evaluation.mdc  git-workflow.mdc  learning-mode.mdc  python-production-standards.mdc  streamlit-patterns.mdc
.github/ISSUE_TEMPLATE/: config.yml  task.md
.github/docs/: FLAGSHIP_CHECKLIST.md  project_labels.md
.github/docs/templates/: MODEL_CARD.md  README.template.md  README_template.md  cursor_task_brief.md  vscode_codex_task_brief.md
.github/scripts/: setup-labels.sh
.github/templates/: cursor_task_brief.md  issue_template.md  pull_request_template.md
.opencode/agents/: docs-fix.md  docs-sync.md  eval-guardian.md  learn.md  pattern-scout.md  security-auditor.md
.opencode/commands/: commit-msg.md  draft-issue.md  eval.md  labels.md  pr-prep.md  readme.md  review.md  task-brief.md  test.md
certifications/: README.md
certifications/in_progress/: python_for_everybody_progress.md
courses/cs50_harvard/: README.md
courses/cs50_harvard/code/05_data_structures/speller/py_src/: Makefile  README.md  pyproject.toml
courses/cs50_harvard/code/05_data_structures/speller/py_src/docs/: log_queries.md  make_cmds.md  ruff_cmds.md  virtualenv_queries.md
courses/cs50_harvard/code/05_data_structures/speller/py_src/misspelled/: misspelled_aca.txt
courses/cs50_harvard/code/05_data_structures/speller/py_src/src/speller/: __init__.py  __main__.py  _compat.py  _compat_py312.py  _compat_py314.py  benchmarks.py  config.py  dictionaries.py  load_dictionary.py  logger.py  protocols.py  register.py  speller.py  structured_logger.py  template_logger.py  text_processor.py
courses/cs50_harvard/code/05_data_structures/speller/py_src/src/speller/data/: __init__.py
courses/cs50_harvard/code/05_data_structures/speller/py_src/tests/: __init__.py  conftest.py  test_benchmarks.py  test_config.py  test_dictionary.py  test_main.py  test_speller.py  test_text_processor.py
courses/cs50_harvard/notes/: 00_scratch.md  01_c.md  02_arrays.md  03_algorithms.md  04_memory.md  05_data_structures.md
courses/datacamp_data_analyst/: README.md
courses/datacamp_data_analyst/notebooks/: 01_intro_to_python.ipynb  02_intermediate_python.ipynb  README.md
courses/ibm_data_analyst/: README.md
courses/python_for_everybody/: README.md
courses/python_for_everybody/experiments/: 01_lambda_functions.py  02_pathlib_path.ipynb  03_collections_lib.ipynb  04_itertools_chain.ipynb  05_logging_lib.ipynb  06_unitest_lib.py  07_pytest.py  08_pytest_parametrize.ipynb  10_nargs_argparse.py  11_maketrans.py  12_argparse_error.py  13_test_colors.py  14_python_class.py  15_bmp_bytes.ipynb  16_intenum_.py  17_constant_patterns.py  18_python_type_system_reference.ipynb  19_python_dispatch_iteration_reference.ipynb  20_python_data_structures_reference.ipynb  21_python_import_system.py  22_python_datamodel_functools_reference.py  23_python_hash_hashable_reference.py  24_python_regex_reference.py  25_python_recursion_reference.py  26_python_random_reference.py  27_contextmanager_decorators_reference.py  28_python_generators_iterators_contextmanagers_reference.py  29_python_protocols_abc_reference.py  30_pytest_fixtures_reference.py  31_python_search_algorithms_reference.py  32_python_typevar_generic_reference.py  33_pytest_builtin_fixtures_reference.py  CLAUDE.md  README.md  new_and_init.py  test_action_argparse.py  test_nargs_argparse.py
courses/python_for_everybody/notebooks/: 01_basics_python_notes.ipynb  README.md
courses/sql_mode_thoughtspot/: README.md
cs50_harvard/: notes_cs50.md
docs/: index.html  roadmap.html
docs/activation_plans/: ACCEPTANCE_CRITERIA.md  DAILY_ROUTINE_GUIDE.md  README.md  REPO_STRUCTURE_TEMPLATE.md  WEEK_01_02_ACTIVATION_PLAN.md  WEEK_01_MASTER_ACTIVATION_PLAN.md  WEEK_01_QUICK_REFERENCE.md  WEEK_03_04_ACTIVATION_PLAN.md  WEEK_05_06_ACTIVATION_PLAN.md  WEEK_07_08_ACTIVATION_PLAN.md  WEEK_09_10_ACTIVATION_PLAN.md  WEEK_11_12_ACTIVATION_PLAN.md
docs/archived/: index.html
docs/llm_rankings/: llm-benchmark-comparison--june-2026-v2.md  llm-benchmark-comparison--june-2026.md
docs/roadmap_reviews/: AFC_ROADMAP_COURSE_REVIEW_2026-06-10.md  Certification_Roadmap_Review_v1.md  Gap_Analysis_Certifications_v8.9.md  MARKET_ANALYSIS_v9.3.md  NETWORKING_ROADMAP_ADDITION.md  PORTFOLIO_CERT_MAP_AND_ROADMAP_REVIEW_2026-06-10.md  ROADMAP_v8.1_REVIEW_AND_CHANGES.md  agent-1-claude-review_v10.md  agent-2-gemini-review_v10.md  agent-3-grok-review_v10.md
getting_started/: Gemini_AIStudio_Reference_v1_0.md  LM_Studio_Reference_Mac.md  Ollama_Reference_Mac.md  OpenCode_Reference_Cursor.md  README.md  SETUP.md  SETUP_GUIDE.md  prerequisites.md  setup_complete.md
getting_started/cloud_llm_setup/: Gemini_AIStudio_Reference_v1_1.md
getting_started/local_llm_setup/: OpenCode_Reference_Cursor.md
llm-api-smoke-test/: LICENSE  Makefile  README.md  pyproject.toml
llm-api-smoke-test/src/llm_api_smoke_test/: __init__.py  __main__.py  batch_runner.py  config.py  logger.py  providers.py  register.py  runner.py
llm-api-smoke-test/tests/: README.md  __init__.py  conftest.py  test_batch_runner.py  test_config.py  test_integration.py  test_main.py  test_providers_openrouter.py  test_register.py  test_runner.py
notes/: learning-log.md  week1_summary.md
projects/: README.md
python/: check_env.py  requirements.txt
python/experiments/: lambdaexp.py
python/py4e_week1/: notes_py4e_week1.md  overtime_pay.py
python/py4e_week2/: daily_returns.py
python/week1_basics/: calc_hours.py  hello.py  summary_expenses.py  test_overtime_import.py
python/week2_data_struct/: daily_returns.py
python/week2_flowcontrol/: daily_returns.py
python/week3_data_struct/: summary_expenses_cat.py
sql/: move_practice_basic.sql  notes_sql.md  notes_sqlbasics.md
week1/: calc_hours.py  hello.py
(+108 files in other folders)
