[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-api-smoke-test"
version = "0.1.0"
description = "Verify Anthropic + Gemini API keys with a single round trip — production-grade smoke test."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Manuel Reyes", email = "manuelreyesv410@gmail.com" }
]
keywords = ["llm", "anthropic", "gemini", "smoke-test", "genai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "anthropic>=0.40",
    "google-genai>=1.0,<3.0",
    "httpx>=0.27,<1.0",
    "structlog>=24.1",
    "aiolimiter>=1.1,<2.0",
    "platformdirs>=4.0,<5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<2.0",   # ← required for asyncio_mode = "auto"
    "pytest-cov>=5.0,<7.0",
]
dev = [
    "llm-api-smoke-test[test]",   # includes the test group
    "ruff>=0.5,<1.0",
    "pyright>=1.1,<2.0",
]

# coverage config -> Without it, --cov reports include the test files themselves
# and TYPE_CHECKING blocks, inflating/deflating the number.
[tool.coverage.run]
source = ["llm_api_smoke_test"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",          # Protocol method bodies (just ...)
]

[project.scripts]
# After `pip install -e ".[dev]"`, run `llm-api-smoke-test` from the shell.
llm-api-smoke-test = "llm_api_smoke_test.__main__:cli_entry"

[project.urls]
Homepage = "https://github.com/manuel-reyes-ml/learning_journey"
Repository = "https://github.com/manuel-reyes-ml/learning_journey"

# ---------- Tooling configuration ----------

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# PEP 561 — ship the type-info marker so downstream type checkers see it.
llm_api_smoke_test = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]

# The pythonpath = ["src"] is a workaround for running tests without installing the package.
# Once you do pip install -e . (which you should — it's the answer to the import-resolution
# issue you just hit), the package is on sys.path properly and pythonpath becomes unnecessary.
# It's harmless to keep as a belt-and-suspenders measure, but know that the editable install
# is the real fix, not this line.
pythonpath = ["src"]

addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "D",    # pydocstyle — catches the empty docstrings you keep hitting
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"   # matches your NumPy-style docstrings

[tool.ruff.lint.per-file-ignores]
# E501 -> long parametrize lines are fine in tests
# D -> tests don't need full docstrings
"tests/*" = ["E501", "D"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = "warning"
reportMissingTypeStubs = false