# =============================================================================
# BUILD SYSTEM
# =============================================================================
# Tells pip HOW to build your package. This runs when you do:
#   pip install .           (install from source)
#   pip install -e .        (install in editable/development mode)
#   python -m build         (create distributable wheel)
#
# setuptools is the default build backend. Others exist (flit, hatch, poetry)
# but setuptools is the most widely used and what you'll encounter in
# production codebases.
#
# "wheel" is the standard Python package format (.whl files).

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"


# =============================================================================
# PROJECT METADATA
# =============================================================================
# Everything that describes your package: name, version, dependencies,
# entry points, supported Python versions, etc.
#
# This replaces BOTH setup.py AND requirements.txt.

[project]
name = "cs50-speller"
version = "1.0.0"
description = "Production-grade spell checker inspired by CS50, built as a Python package"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

# Author information — shown on PyPI if you ever publish
authors = [
    {name = "Manuel Reyes", email = "manuelreyesv410@gmail.com"},
]

# Keywords help people find your package on PyPI
# Also useful for GitHub topic tags
keywords = [
    "spell-checker",
    "cs50",
    "hash-table",
    "cli",
    "nlp",
]

# PyPI classifiers — categorize your package
# Full list: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]


# ─── Dependencies ───────────────────────────────────────────────
# Runtime dependencies — installed automatically when someone does:
#   pip install cs50-speller
#
# Your speller uses only stdlib modules (pathlib, logging, argparse,
# dataclasses, etc.) so no external dependencies are needed.
# If you needed external packages, list them here:
#
# dependencies = [
#     "pydantic>=2.0",        # Stage 1: DataVault structured outputs
#     "chromadb>=0.4",        # Stage 1: PolicyPulse vector store
#     "google-generativeai",  # Stage 1: DataVault Gemini SDK
# ]
dependencies = []


# ─── Optional Dependencies ──────────────────────────────────────
# Groups of extras that are NOT required for the package to work,
# but are needed for specific use cases.
#
# Install with:
#   pip install -e ".[dev]"       ← installs dev tools
#   pip install -e ".[test]"      ← installs test tools only
#   pip install -e ".[dev,test]"  ← installs both groups
#
# This replaces requirements-dev.txt and requirements-test.txt

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "ruff>=0.4",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]


# ─── Entry Points (CLI Commands) ───────────────────────────────
# Creates executable commands that work after installation.
#
# After `pip install -e .`, you can run:
#   $ speller texts/cat.txt
#
# instead of:
#   $ python -m speller texts/cat.txt
#
# The format is:  command_name = "package.module:function"
# pip generates a wrapper script that calls this function.
#
# This is how Airflow registers `airflow`, dbt registers `dbt`,
# ruff registers `ruff`, and LangChain registers `langchain-cli`.

[project.scripts]
speller = "speller.__main__:main"


# ─── Project URLs ──────────────────────────────────────────────
# Links shown on PyPI and in package metadata.
# Also useful for GitHub repo linking.

[project.urls]
Homepage = "https://github.com/manuel-reyes-ml"
Repository = "https://github.com/manuel-reyes-ml/learning_journey"
Issues = "https://github.com/manuel-reyes-ml/learning_journey/issues"


# =============================================================================
# SETUPTOOLS CONFIGURATION
# =============================================================================
# Tell setuptools WHERE to find your package source code.
# With the src/ layout, your package is inside src/speller/.
#
# Without this, setuptools can't find your modules and
# `pip install -e .` would install an empty package.

[tool.setuptools.packages.find]
wehre = ["src"]


# =============================================================================
# PYTEST CONFIGURATION
# =============================================================================
# Replaces pytest.ini or [pytest] section in setup.cfg
#
# Install: pip install -e ".[test]"
# Run:     pytest
# Run:     pytest -v                    (verbose)
# Run:     pytest --cov=speller         (with coverage)
# Run:     pytest tests/test_dictionary.py  (specific file)

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# Minimum pytest version required
minversion = "8.0"

# Default command-line options (always applied)
# -ra: show summary of all test outcomes at the end
# --strict-markers: error on unknown @pytest.mark decorators
addopts = "-ra --strict-markers"

# Register custom markers (prevents warnings)
# Usage in tests: @pytest.mark.slow
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests (require real files)",
]


# =============================================================================
# MYPY CONFIGURATION
# =============================================================================
# Static type checker — catches type errors WITHOUT running your code.
# Replaces .mypy.ini or mypy.ini
#
# Run: mypy src/
# Run: mypy src/speller/dictionary.py   (specific file)

[tool.mypy]
python_version = "3.11"

# strict = true enables ALL of these individually:
strict = true
#   warn_return_any = true
#   warn_unused_configs = true
#   disallow_untyped_defs = true         ← every function needs type hints
#   disallow_incomplete_defs = true
#   check_untyped_defs = true
#   disallow_untyped_decorators = true
#   no_implicit_optional = true
#   warn_redundant_casts = true
#   warn_unused_ignores = true
#   warn_no_return = true
#   no_implicit_reexport = true
#   strict_equality = true

# Show error codes in output (e.g., [attr-defined], [arg-type])
# Makes it easier to look up solutions
show_error_codes = true


# =============================================================================
# RUFF CONFIGURATION
# =============================================================================
# Fast Python linter + formatter (replaces flake8, isort, black, and more).
# Written in Rust — 10-100x faster than Python-based linters.
# Replaces .flake8, .isort.cfg, and pycodestyle.cfg
#
# Run:      ruff check src/               (lint)
# Run:      ruff check src/ --fix         (lint and auto-fix)
# Run:      ruff format src/              (format like black)

[tool.ruff]
# Target Python version (affects which syntax is allowed)
target-version = "py311"

# Maximum line length (88 is black's default, widely adopted)
line-length = 88

# Directories to exclude from linting
exclude = [
    "__pycache__",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "*.egg-info",
]

[tool.ruff.lint]
# Rule sets to enable:
#   E = pycodestyle errors (basic style)
#   W = pycodestyle warnings
#   F = pyflakes (unused imports, undefined names)
#   I = isort (import sorting)
#   N = pep8-naming (naming conventions)
#   D = pydocstyle (docstring style)
#   UP = pyupgrade (modernize syntax)
#   B = flake8-bugbear (common bugs)
#   SIM = flake8-simplify (simplifiable code)
#   RUF = ruff-specific rules
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]

# Rules to ignore
ignore = [
    "D100",    # Missing docstring in public module (we have them, just not all)
    "D104",    # Missing docstring in public package (__init__.py)
]

[tool.ruff.lint.pydocstyle]
# NumPy-style docstrings (matches your convention)
convention = "numpy"

[tool.ruff.lint.isort]
# Force imports to be sorted and grouped consistently
# Group 1: stdlib (import os, import sys)
# Group 2: third-party (import pydantic, import pytest)
# Group 3: local (from speller.config import ...)
known-first-party = ["speller"]